--- a/backend/board-service/build.gradle
+++ b/backend/board-service/build.gradle
@@ -24,11 +24,12 @@ repositories {
 
 ext {
     set('springCloudVersion', "2021.0.3")
+    set('querydslVersion', "2021.0.3")
     set('log4j2.version', "2.17.2") // log4j 보안 패치
 }
 
 dependencies {
-//    implementation files('../../module-common/build/libs/module-common-0.1.jar') // 공통 모듈, @ComponentScan(basePackages={"org.egovframe.cloud"}) 추가해야 적용된다
+    implementation files('../module-common/build/libs/module-common-4.1.0-plain.jar') // 공통 모듈, @ComponentScan(basePackages={"org.egovframe.cloud"}) 추가해야 적용된다
     implementation 'org.egovframe.cloud:module-common:0.1'
     implementation('org.egovframe.rte:org.egovframe.rte.fdl.cmmn:4.1.0') {
         exclude group: 'org.egovframe.rte', module: 'org.egovframe.rte.fdl.logging'
@@ -44,26 +45,31 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'  // bus
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
     implementation 'org.apache.tomcat:tomcat-annotations-api:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-el:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:9.0.73'
     implementation 'net.logstash.logback:logstash-logback-encoder:7.2'        // logstash logback
+    implementation 'commons-net:commons-net:3.8.0' // FTPClient
     implementation 'mysql:mysql-connector-java'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    // querydsl
-    implementation 'com.querydsl:querydsl-jpa:5.0.0'
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
-    implementation 'com.querydsl:querydsl-sql:5.0.0'
-    implementation 'com.querydsl:querydsl-sql-spring:5.0.0'
 
     //messaging
     implementation 'org.springframework.cloud:spring-cloud-stream'
     implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 
+    // querydsl
+    implementation 'com.querydsl:querydsl-jpa:${querydslVersion}'
+    annotationProcessor 'com.querydsl:querydsl-apt:${querydslVersion}'
+    implementation 'com.querydsl:querydsl-sql:${querydslVersion}'
+    implementation 'com.querydsl:querydsl-sql-spring:${querydslVersion}'
+    
     // openapi docs
     implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.6.9'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 
     // lombok
     implementation 'org.projectlombok:lombok'
