--- a/backend/reserve-check-service/src/main/resources/application.yml
+++ b/backend/reserve-check-service/src/main/resources/application.yml
@@ -15,4 +15,4 @@ management:
 info:
   app:
     name: Reserve Check Service
-    description: 예약시스템 기능 중 예약확인, 예약승인/취소 기능을 제공
+    description: ccc
