--- a/frontend/portal/package.json
+++ b/frontend/portal/package.json
@@ -7,7 +7,7 @@
     "npm": "6.14.7"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --transpile-only --project tsconfig.server.json server/index.ts",
     "dev:sm": "SITE_ID=3 npm run dev",
     "dev:lg": "SITE_ID=2 npm run dev",
     "dev:smWin": "set SITE_ID=3&&npm run dev",
