add mui@5 library

--- a/frontend/portal/package.json
+++ b/frontend/portal/package.json
@@ -27,10 +27,16 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^29.1.0",
     "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.156",
+    "@mui/material": "^5.15.0",
+    "@mui/styles": "^5.15.0",
     "axios": "^0.21.1",
     "cookies": "^0.8.0",
     "cors": "^2.8.5",
