--- a/backend/discovery/build.gradle
+++ b/backend/discovery/build.gradle
@@ -12,6 +12,11 @@ repositories {
     mavenCentral()
 }
 
+jar {
+	enabled = false
+}
+
+
 ext {
     set('springCloudVersion', "2021.0.3")
     set('log4j2.version', "2.17.2") // log4j 보안 패치
