--- a/backend/user-service/build.gradle
+++ b/backend/user-service/build.gradle
@@ -28,7 +28,7 @@ ext {
 }
 
 dependencies {
-//    implementation files('../../module-common/build/libs/module-common-0.1.jar') // 공통 모듈, @ComponentScan(basePackages={"org.egovframe.cloud"}) 추가해야 적용된다
+    implementation files('../module-common/build/libs/module-common-4.1.0-plain.jar') // 공통 모듈, @ComponentScan(basePackages={"org.egovframe.cloud"}) 추가해야 적용된다
     implementation 'org.egovframe.cloud:module-common:0.1'
     implementation('org.egovframe.rte:org.egovframe.rte.fdl.cmmn:4.1.0') {
         exclude group: 'org.egovframe.rte', module: 'org.egovframe.rte.fdl.logging'
@@ -41,16 +41,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'    // config
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // config
-    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'  // bus
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'  
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
     implementation 'org.apache.tomcat:tomcat-annotations-api:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-el:9.0.73'
     implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:9.0.73'
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'        // logstash logback
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
     implementation 'mysql:mysql-connector-java'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     // querydsl
